# simple_kafka_example

./: .env.example  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: github-issues.md  license-review.md  local-execution.md  project-status.md  traceability.md  troubleshooting.md  verification.md
docs/adr/: 0001-local-first-rancher-desktop.md  0002-deterministic-rules-before-llm.md  0003-kafka-learning-scope.md  0004-no-kubernetes.md
prompts/: initial_prompt.md  optimized_prompt.md
scripts/: consume_and_inspect.sh  create_github_issues.sh  create_topics.sh  demo.sh  license_report.sh  produce_demo_transactions.sh  start.sh  start_results_ui.sh  verify.sh
src/banking_ai/: __init__.py  cli.py  config.py  consumer.py  graph.py  kafka_admin.py  models.py  ollama_client.py  producer.py  results_ui.py  rules.py
tests/: test_config.py  test_graph_state.py  test_models.py  test_results_ui.py  test_rules.py
